<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:defaultValue="@string/apptheme"
        android:entries="@array/pref_theme_entries"
        android:entryValues="@array/pref_theme_entryValues"
        android:key="pref_key_theme"
        android:summary="@string/set_color_scheme"
        android:title="@string/theme" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_storage_dir"
        android:summary="@string/save_on_sd"
        android:switchTextOff="internal"
        android:switchTextOn="external"
        android:title="@string/External" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="pref_alarm_wake_up"
        android:summary="@string/wake_up"
        android:switchTextOff="@string/no"
        android:switchTextOn="@string/yes"
        android:title="@string/wake_up_on" />

</PreferenceScreen>